--- a/BookNGo/Views/Home/Details.cshtml
+++ b/BookNGo/Views/Home/Details.cshtml
@@ -72,5 +72,5 @@
     {
         @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = Model.HouseId }, null)
     }
-    @Html.ActionLink("Back to List", "MyHouse", "House")
+    |@Html.ActionLink("Back to Home", "Index", "Home")
 </p>
