--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -79,5 +79,5 @@
 
     @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }, new { @class = "btn btn-success " })
     @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
-    @Html.ActionLink("Change your password", "ChangePassword", "Manage", new { @class = "btn btn-warning" })
+    @Html.ActionLink("Change your password", "ChangePassword", "Manage", new { id = Model.Id }, new { @class = "btn btn-warning" })
 </p>
