--- a/BookNGo/Views/Users/Edit.cshtml
+++ b/BookNGo/Views/Users/Edit.cshtml
@@ -68,7 +68,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Details")
+    @Html.ActionLink("Back to Profile", "Details")
 </div>
 
 @section Scripts {
