--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -61,12 +61,12 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "MyHouses", "Houses")
+            <input type="submit" value="Delete" class="btn btn-default" />
         </div>
     }
 </div>
