change my reservation algorithm and comment things

--- a/BookNGo/Views/Home/AdminPage.cshtml
+++ b/BookNGo/Views/Home/AdminPage.cshtml
@@ -15,11 +15,11 @@
                 <!-- Category Button -->
                 @Html.ActionLink("Category", "Index", "Categories", null, new { @class = "btn btn-success btn-block btn-large" })
             </div>
-            <div class="col-md-2 no-padding">
-                <!-- Feature Button -->
+            @*<div class="col-md-2 no-padding">
+                 Feature Button
                 @Html.ActionLink("Feature", "Index", "Features", null, new { @class = "btn btn-info btn-block btn-large" })
 
-            </div>
+            </div>*@
             <div class="col-md-2 no-padding">
                 <!-- Reservation Button -->
                 @Html.ActionLink("Reservation", "Index", "Reservations", null, new { @class = "btn btn-warning btn-block btn-large" })
