--- a/BookNGo/Views/Houses/Details.cshtml
+++ b/BookNGo/Views/Houses/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookNGo.Models.House
+﻿@model BookNGo.ViewModels.HouseImage
 
 @{
     ViewBag.Title = "Details House";
@@ -9,65 +9,74 @@
 <div>
     <h4>House</h4>
     <hr />
+
+    @*@{
+        string appPath = HttpContext.Current.Server.MapPath("~");
+        string res = string.Format("~{0}", Model.Image.ImageUrl.Replace(appPath, "").Replace("\\", "/"));
+        string imgscr = res;
+    }
+
+    <img src="@imgscr" style="max-height:200px; max-width:200px" />*@
+
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.House.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.House.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.House.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.House.Description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.House.Address)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.House.Address)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MaxOccupancy)
+            @Html.DisplayNameFor(model => model.House.MaxOccupancy)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MaxOccupancy)
+            @Html.DisplayFor(model => model.House.MaxOccupancy)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PricePerNight)
+            @Html.DisplayNameFor(model => model.House.PricePerNight)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PricePerNight)
+            @Html.DisplayFor(model => model.House.PricePerNight)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Category)
+            @Html.DisplayNameFor(model => model.House.Category)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Category.CategoryName)
+            @Html.DisplayFor(model => model.House.Category.CategoryName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.House.Location)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Location.LocationName)
+            @Html.DisplayFor(model => model.House.Location.LocationName)
         </dd>
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.HouseId })
+    @Html.ActionLink("Edit", "Edit", new { id = Model.House.HouseId })
 </p>
