--- a/BookNGo/Views/Reservations/MyReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyReservations.cshtml
@@ -6,6 +6,8 @@
 
 <h2>My Reservations</h2>
 
+@Html.ActionLink("My Old Reservation", "MyOldReservations", "Reservations", new { @class = "btn btn-warning" })
+
 <table class="table">
     <tr>
         <th>
