fix 2 bugs + my houses reservations

--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @Html.ActionLink("Add House", "Create", "House", new { @class = "btn btn-primary" })
-    @Html.ActionLink("Reservations", "MyHouseReservations", "Reservations", new {@class ="btn btn-success" })
+    @Html.ActionLink("Reservations", "MyHousesReservations", "Reservations", null, new {@class ="btn btn-success" })
 </p>
 
 <table class="table table-striped table-hover">
