--- a/BookNGo/Views/Reservations/MyHousesReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyHousesReservations.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BookNGo.Models.Reservation>
 
 @{
-    ViewBag.Title = "My House Reservations";
+    ViewBag.Title = "My Houses Reservations";
 }
 
-<h2>My House Reservations</h2>
+<h2>My Houses Reservations</h2>
 
 <table class="table">
     <tr>
@@ -29,9 +29,9 @@
         <th>
             @Html.DisplayNameFor(model => model.PriceCharged)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.ApplicationUserId)
-        </th>
+        </th>*@
         <th></th>
     </tr>
 
@@ -58,9 +58,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.PriceCharged)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.ApplicationUserId)
-        </td>
+        </td>*@
         <td>
             @Html.ActionLink("Details Reservation", "Details", new { id=item.ReservationId }) @*|
             @Html.ActionLink("Cancel Reservation", "Delete", new { id=item.ReservationId })*@
