--- a/BookNGo/Views/Reservations/Delete.cshtml
+++ b/BookNGo/Views/Reservations/Delete.cshtml
@@ -80,9 +80,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to My Reservations", "MyReservations", "Reservations")
-        </div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        @Html.ActionLink("Back to Home", "Index", "Home")
+    </div>
     }
 </div>
