--- a/BookNGo/Views/Reservations/Details.cshtml
+++ b/BookNGo/Views/Reservations/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BookNGo.Models.Reservation
 
 @{
-    ViewBag.Title = "Details For Your Reservation";
+    ViewBag.Title = "Details For Reservation";
 }
 
 <h2>Details For Your Reservation</h2>
@@ -77,5 +77,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to My Reservations", "MyReservations", "Reservations")
+    @Html.ActionLink("Back to Home", "Index", "Home")
 </p>
