--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -44,7 +44,27 @@
         @*<div class="form-group">
             @Html.LabelFor(model => model.PriceCharged, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.LabelFor(model => model.PriceCharged, new { htmlAttributes = new { @class = "form-control" } })
+
+                @{
+                    string priceShow = "";
+                    if (Model.EndDate != null && Model.StartDate != null)
+                    {
+                        TimeSpan priceTimeSpan = Model.EndDate - Model.StartDate;
+                        int price = priceTimeSpan.Days;
+                        price = ViewBag.House.PricePerNight * price;
+                        priceShow = Convert.ToString(price);
+                    }
+                    else
+                    {
+                        priceShow = "0";
+                    }
+
+
+
+
+                }
+
+                @Html.Label(@priceShow, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PriceCharged, "", new { @class = "text-danger" })
             </div>
         </div>*@
