--- a/BookNGo/Views/Reservations/MyHousesReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyHousesReservations.cshtml
@@ -6,6 +6,8 @@
 
 <h2>My Houses Reservations</h2>
 
+@Html.ActionLink("History", "MyOldHousesReservations", "Reservations", null, new { @class = "btn btn-warning" })
+
 <table class="table">
     <tr>
         <th>
@@ -29,43 +31,43 @@
         <th>
             @Html.DisplayNameFor(model => model.PriceCharged)
         </th>
-        @*<th>
+        <th>
             @Html.DisplayNameFor(model => model.ApplicationUserId)
-        </th>*@
+        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.House.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberOfOccupants)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfBooking)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comments)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PriceCharged)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.ApplicationUserId)
-        </td>*@
-        <td>
-            @Html.ActionLink("Details Reservation", "Details", new { id=item.ReservationId }) @*|
-            @Html.ActionLink("Cancel Reservation", "Delete", new { id=item.ReservationId })*@
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.House.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StartDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberOfOccupants)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateOfBooking)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comments)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PriceCharged)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
+            </td>
+            <td>
+                @Html.ActionLink("Details Reservation", "Details", new { id = item.ReservationId })
+            </td>
+        </tr>
+    }
 
 </table>
