--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -62,6 +62,7 @@
                 @Html.DisplayFor(modelItem => item.Location.LocationName)
             </td>
             <td>
+                @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null) |
                 @Html.ActionLink("Edit House", "Edit", new { id = item.HouseId }) |
                 @Html.ActionLink("Details House", "Details", new { id = item.HouseId }) |
                 @Html.ActionLink("Delete House", "Delete", new { id = item.HouseId })
