--- a/BookNGo/Views/Categories/Edit.cshtml
+++ b/BookNGo/Views/Categories/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookNGo.Models.Category
 
-@{
+@*@{
     ViewBag.Title = "Edit";
-}
+}*@
 
-<h2>Edit</h2>
+<h2>Edit Category</h2>
 
 
 @using (Html.BeginForm())
@@ -12,13 +12,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CategoryId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-md-2 magnify-label" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
@@ -27,15 +26,15 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
