--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -1,72 +1,42 @@
 ﻿@model BookNGo.Models.House
 
-@{
-    ViewBag.Title = "Delete House";
-}
+@*@{
+        ViewBag.Title = "Delete House";
+}*@
 
 <h2>Delete House</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<hr />
+
+<h3>Do you want to delete this house?</h3>
+
+<table class="table table-striped table-hover">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.Title)</th>
+        <th>@Html.DisplayNameFor(model => model.Description)</th>
+        <th>@Html.DisplayNameFor(model => model.Address)</th>
+        <th>@Html.DisplayNameFor(model => model.MaxOccupancy)</th>
+        <th>@Html.DisplayNameFor(model => model.PricePerNight)
+        <th>@Html.DisplayNameFor(model => model.LocationId)</th>
+    </tr>
+    <tr style="font-size: 115%; padding-top: 15px;">
+        <td>@Html.DisplayFor(model => model.Title)</td>
+        <td>@Html.DisplayFor(model => model.Description)</td>
+        <td>@Html.DisplayFor(model => model.Address)</td>
+        <td>@Html.DisplayFor(model => model.MaxOccupancy)</td>
+        <td>@Html.DisplayFor(model => model.PricePerNight)
+        <td>@Html.DisplayFor(model => model.LocationId)</td>
+    </tr>
+</table>
+
 <div>
-    <h4>House</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MaxOccupancy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MaxOccupancy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PricePerNight)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PricePerNight)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LocationId)
-        </dd>
-
-    </dl>
-
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
-        </div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-danger btn-sm" />
+        @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info btn-sm" })
+    </div>
     }
 </div>
