--- a/BookNGo/Views/Locations/Details.cshtml
+++ b/BookNGo/Views/Locations/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model BookNGo.Models.Location
 
-@{
+@*@{
     ViewBag.Title = "Details";
-}
+}*@
 
 <h2>Details</h2>
 
 <div>
-    <h4>Location</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +20,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.LocationId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.LocationId }, new { @class="btn btn-primary"})
+    @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-info" })
 </p>
