--- a/BookNGo/Views/Locations/Index.cshtml
+++ b/BookNGo/Views/Locations/Index.cshtml
@@ -4,12 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Locations</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Location", "Create", null, new { @class = "btn btn-info btn-sm" })
 </p>
-<table class="table">
+
+<table class="table table-striped table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.LocationName)
@@ -19,18 +20,19 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.LocationName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.LocationId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.LocationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.LocationId }) 
+            @Html.ActionLink("Edit", "Edit", new { id=item.LocationId }, new { @class = "btn btn-primary btn-sm" })
+            @Html.ActionLink("Details", "Details", new { id = item.LocationId }, new { @class = "btn btn-warning btn-sm" })
+            @Html.ActionLink("Delete", "Delete", new { id = item.LocationId }, new { @class = "btn btn-danger btn-sm" }) 
         </td>
     </tr>
 }
 
 </table>
+
 <div>
-    @Html.ActionLink("Back", "AdminPage", "Home")
+    @Html.ActionLink("Back", "AdminPage", "Home", null, new { @class= "btn btn-info btn-sm" })
 </div>
