--- a/BookNGo/Views/Reservations/Details.cshtml
+++ b/BookNGo/Views/Reservations/Details.cshtml
@@ -4,78 +4,29 @@
     ViewBag.Title = "Details For Reservation";
 }
 
-<h2>Details For Your Reservation</h2>
+<h2>Reservation Details</h2>
 
-<div>
-    <h4>Reservation</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.House.Title)
-        </dt>
+<table class="table table-striped table-hover">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.House.Title)</th>
+        <th>@Html.DisplayNameFor(model => model.StartDate)</th>
+        <th>@Html.DisplayNameFor(model => model.EndDate)</th>
+        <th>@Html.DisplayNameFor(model => model.NumberOfOccupants)</th>
+        <th>@Html.DisplayNameFor(model => model.DateOfBooking)
+        <th>@Html.DisplayNameFor(model => model.Comments)</th>
+        <th>@Html.DisplayNameFor(model => model.PriceCharged)</th>
+    </tr>
+    <tr style="font-size: 115%; padding-top: 15px;">
+        <td>@Html.DisplayFor(model => model.House.Title)</td>
+        <td>@Html.DisplayFor(model => model.StartDate)</td>
+        <td>@Html.DisplayFor(model => model.EndDate)</td>
+        <td>@Html.DisplayFor(model => model.NumberOfOccupants)</td>
+        <td>@Html.DisplayFor(model => model.DateOfBooking)
+        <td>@Html.DisplayFor(model => model.Comments)</td>
+        <td>@Html.DisplayFor(model => model.PriceCharged)</td>
+    </tr>
+</table>
 
-        <dd>
-            @Html.DisplayFor(model => model.House.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumberOfOccupants)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumberOfOccupants)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateOfBooking)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBooking)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Comments)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Comments)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PriceCharged)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PriceCharged)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUserId)
-        </dd>
-
-    </dl>
-</div>
 <p>
-    @Html.ActionLink("Back to Home", "Index", "Home")
+    @Html.ActionLink("Back", "Index", "Reservations", null, new { @class = "btn btn-info" })
 </p>
