--- a/BookNGo/Views/Reservations/Index.cshtml
+++ b/BookNGo/Views/Reservations/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<BookNGo.Models.Reservation>
 
-@{
+@*@{
     ViewBag.Title = "Index";
-}
+}*@
 
-<h2>Index</h2>
+<h2>Reservations</h2>
 
-<table class="table">
+<table class="table table-striped table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.House.Title)
@@ -30,45 +30,45 @@
             @Html.DisplayNameFor(model => model.PriceCharged)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
+            @*@Html.DisplayNameFor(model => model.ApplicationUserId)*@
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.House.Title)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.StartDate)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.EndDate)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.NumberOfOccupants)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.DateOfBooking)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.Comments)
         </td>
-        <td>
+        <td style="font-size: 115%; padding-top: 15px;">
             @Html.DisplayFor(modelItem => item.PriceCharged)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ApplicationUserId)
+        <td style="font-size: 115%; padding-top: 15px;">
+            @*@Html.DisplayFor(modelItem => item.ApplicationUserId)*@
         </td>
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.ReservationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReservationId }) 
+        <td style="font-size: 115%; padding-top: 15px;">
+            @Html.ActionLink("Details", "Details", new { id=item.ReservationId }, new {@class="btn btn-warning btn-sm" })
+            @Html.ActionLink("Delete", "Delete", new { id=item.ReservationId }, new { @class = "btn btn-danger btn-sm" }) 
         </td>
     </tr>
 }
 
 </table>
 <div>
-    @Html.ActionLink("Back", "AdminPage", "Home")
+    @Html.ActionLink("Back", "AdminPage", "Home", null, new { @class="btn btn-info"})
 </div>
