--- a/BookNGo/Views/Reservations/MyOldReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyOldReservations.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<BookNGo.Models.Reservation>
 
-@{
-    ViewBag.Title = "My History";
-}
+@*@{
+        ViewBag.Title = "My History";
+}*@
 
 <h2>My History</h2>
 
-@Html.ActionLink("My Reservations", "MyReservations", "Reservations", null, new { @class = "btn btn-warning" })
-
-<table class="table">
+<table class="table table-striped table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.House.Title)
@@ -40,35 +38,35 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.House.Title)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.NumberOfOccupants)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.DateOfBooking)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.Comments)
             </td>
-            <td>
+            <td style="font-size: 115%; padding-top: 15px;">
                 @Html.DisplayFor(modelItem => item.PriceCharged)
             </td>
             @*<td>
                     @Html.DisplayFor(modelItem => item.ApplicationUserId)
                 </td>*@
             <td>
-                @Html.ActionLink("Details Reservation", "Details", new { id = item.ReservationId }) @*|
-                @Html.ActionLink("Cancel Reservation", "Delete", new { id = item.ReservationId })*@
+                @Html.ActionLink("Reservation Details", "Details", new { id = item.ReservationId }, new { @class = "btn btn-warning btn-sm" })
             </td>
         </tr>
     }
-
 </table>
+
+@Html.ActionLink("My Reservations", "MyReservations", "Reservations", null, new { @class = "btn btn-warning" })
